# AgentGuard

./: .gitignore  CHANGELOG.md  DEMO_GUIDE.md  LOCAL_SETUP.md  Makefile  PRODUCTION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_FEATURES.md  QUICKREF_PRODUCTION.md  QUICKSTART.md  README.md  START_HERE.md  SUMMARY_PRODUCTION_READY.md  UI_ENHANCEMENTS_COMPLETE.md  WINDOWS.md  agentguard.bat  agentguard.ps1  docker-compose.yml  start-local.ps1
.github/workflows/: publish.yml
backend/: .env.production.example  Dockerfile  demo_seed.py  playground_seed.py  pyproject.toml  requirements.txt  seed_demo_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_approvals.py  003_add_jwt_revocation.py  004_add_audit_chain.py  005_add_rbac.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: admin.py  agents.py  approvals.py  deps.py  enforce.py  health.py  logs.py  playground.py  policies.py  reports.py  tokens.py
backend/app/middleware/: __init__.py  monitoring.py  rate_limit.py
backend/app/models/: __init__.py  admin_user.py  agent.py  approval.py  audit_log.py  policy.py  revoked_token.py  team_policy.py
backend/app/schemas/: __init__.py  admin_user.py  agent.py  approval.py  audit_log.py  policy.py
backend/app/utils/: auth.py  chain.py  conditions.py  jwt_utils.py  logger.py  webhook.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_enforce.py  test_logs.py  test_policies.py
docs/: jwt-auth.md
monitoring/: alerts.yml  prometheus.yml
sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
sdk/agentguard/: __init__.py  client.py
sdk/examples/: demo_agent.py  demo_setup.py  quickstart.py
sdk/integrations/: __init__.py  autogen_example.py  crewai_example.py  langgraph_example.py
ui/: package-lock.json  package.json  tsconfig.tsbuildinfo
ui/src/app/: layout.tsx  page.tsx
ui/src/app/admin/: page.tsx
ui/src/app/agents/: page.tsx
ui/src/app/approvals/: page.tsx
ui/src/app/demo/: page.tsx
ui/src/app/logs/: page.tsx
ui/src/app/playground/: page.tsx
ui/src/app/policies/: page.tsx
ui/src/components/: LogsTable.tsx  Navigation.tsx
(+3 files in other folders)
